v1.0/en/_sources/troubleshooting.rst.txt
Troubleshooting

LED colors

During the boot process, the LED will change color several times to
indicate stages in the boot process:

LED color codes      LED color  Boot stage  white  power supply OK
yellow  normal boot process in progress  purple  blue  green  boot
complete, rc_visard ready

The LED will signal some warning or error states to support the user
during troubleshooting.

LED color trouble codes      LED color  Warning or error state  off
no power to the sensor  brief red flash every 5 seconds  no network
connectivity  red while sensor appears to function normally  high-
temperature warning (case has exceeded 60 °C)  red while case is below
60 °C  Some process has terminated and failed to restart.

Hardware issues

LED does not illuminate

The

rc_visard

 does not start up.

Ensure that cables are connected and secured properly.

Ensure that adequate DC voltage (18 V to 30 V) with correct polarity
is applied to the power connector at the pins labeled as Power and
Ground in Table 5\:(page \pageref{hardware_spec:tab-power-pin-
assignments}). Connecting the sensor to voltage outside of the
specified range, to alternating current, with reversed polarity, or to
a supply with voltage spikes will lead to permanent hardware damage.

LED turns red while the sensor appears to function normally

This may indicate a high housing temperature. The sensor might be
mounted in a position that obstructs free airflow around the cooling
fins.

Clean cooling fins and housing.

Ensure a minimum of 10 cm free space in all directions around cooling
fins to provide adequate convective cooling.

Ensure that ambient temperature is within specified range.

Reliability issues and/or mechanical damage

This may be an indication of ambient conditions (vibration, shock,
resonance, and temperature) being outside of specified range (see

Table 3

).

Operating the rc_visard outside of specified ambient conditions might
lead to damage and will void the warranty.

Electrical shock when touching the sensor

This indicates an electrical fault in sensor, cabling, or power supply
or adjacent system.

Immediately turn off power to the system, disconnect cables, and have
a qualified electrician check the setup.

Ensure that the sensor housing is properly grounded; check for large
ground loops.

Connectivity issues

LED briefly flashes red every 5 seconds

If the LED briefly flashes red every 5 seconds, then the

rc_visard

 is not able to detect a network link.

Check that the network cable is properly connected to the rc_visard
and the network.

If no problem is visible, then replace the Ethernet cable.

A GigE Vision client or rcdiscover-gui cannot detect the rc_visard

Check whether the rc_visard’s LED flashes briefly every 5 seconds
(check the cable if it does).

Ensure that the rc_visard is connected to the same subnet (the
discovery mechanism uses broadcasts that will not work across
different subnets).

The Web GUI is inaccessible

Ensure that the rc_visard is turned on and connected to the same
subnet as the host computer.

Check whether the rc_visard’s LED flashes briefly every 5 seconds
(check the cable if it does).

Check whether rcdiscover-gui detects the sensor. If it reports the
rc_visard as unreachable, then the rc_visard’s network configuration
is wrong. See Network configuration\ (Section \ref{installation:sect-
network-configuration}).

If the rc_visard is reported as reachable, try double clicking the
entry to open the Web GUI in a browser.

If this does not work, try entering the rc_visard’s reported IP
address directly in the browser as target address.

Too many Web GUIs are open at the same time

The Web GUI consumes the

rc_visard

’s processing resources to compress images to be transmitted and for
statistical output that is regularly polled by the browser. Leaving
several instances of the Web GUI open on the same or different
computers can significantly diminish the

rc_visard

’s performance. The Web GUI is meant for configuration and validation,
not to permanently monitor the

rc_visard

.

Camera-image issues

The camera image is too bright

If the rc_visard is in manual exposure mode, decrease the exposure
time (see Parameters, Section \ref{stereo_camera:sect-cam-params}), or

switch to auto-exposure mode (see Parameters, Section
\ref{stereo_camera:sect-cam-params}).

The camera image is too dark

If the rc_visard is in manual exposure mode, increase the exposure
time (see Parameters, Section \ref{stereo_camera:sect-cam-params}), or

switch to auto-exposure mode (see Parameters, Section
\ref{stereo_camera:sect-cam-params}).

The camera image is too noisy

Large gain factors cause high-amplitude image noise. To decrease the
image noise,

use an additional light source to increase the scene’s light
intensity, or

choose a greater maximal auto-exposure time (see Parameters, Section
\ref{stereo_camera:sect-cam-params}).

The camera image is out of focus

Check whether the object is too close to the lens and increase the
distance between the object and the lens if it is.

Check whether the lenses are dirty and clean them if they are (see
Lens cleaning, Section \ref{maintenance:sect-lens-cleaning}).

If none of the above applies, a severe hardware problem might exist.
Please contact support (Contact, Section \ref{contact:sect-contact}).

The camera image is blurred

Fast motions in combination with long exposure times can cause blur.
To reduce motion blur,

decrease the motion speed of the rc_visard,

decrease the motion speed of objects in the field of view of the
rc_visard, or

decrease the exposure time of the cameras (see Parameters, Section
\ref{stereo_camera:sect-cam-params}).

The camera image is fuzzy

Check whether the lenses are dirty and clean them if so (see Lens
cleaning, Section \ref{maintenance:sect-lens-cleaning}).

If none of the above applies, a severe hardware problem might exist.
Please contact Roboception (Contact, Section \ref{contact:sect-
contact}).

The camera image frame rate is too low

Increase the image frame rate as described in Parameters\:(Section
\ref{stereo_camera:sect-cam-params}).

The maximal frame rate of the cameras is 25 Hz.

Depth/Disparity, error, and confidence image issues

All these guidelines also apply to error and confidence images,
because they correspond directly to the disparity image.

The disparity image is too sparse or empty

Check whether the camera images are well exposed and sharp. Follow the
instructions in Camera-image issues\:(Section \ref{troubleshooting
:sect-camera-issues}) if applicable.

Check whether the scene has enough texture (see Stereo matching,
Section \ref{stereo_matching:sect-stereo-matching}) and install an
external pattern projector if required.

Increase the Disparity Range and decrease the Minimum
Distance\:(Section \ref{stereo_matching:sect-disp-image-parameters}).

Increase the Maximum Distance\:(Section \ref{stereo_matching:sect-
disp-image-parameters}).

Check whether the object is too close to the cameras. Consider the
depth ranges of the rc_visard variants (see Table 2, page
\pageref{hardware_spec:tab-hardware-differences}).

Decrease the Minimum Confidence\:(Section \ref{stereo_matching:sect-
disp-image-parameters}).

Increase the Maximum Depth Error\:(Section \ref{stereo_matching:sect-
disp-image-parameters}).

Choose a lesser Disparity Image Quality\:(Section \ref{stereo_matching
:sect-disp-image-parameters}). Coarser resolution disparity images are
generally less sparse.

Check the cameras’ calibration and recalibrate if required (see Camera
calibration, Section \ref{camera_calibration:sect-camera-
calibration}).

The disparity images’ frame rate is too low

Check and increase the frame rate of the camera images (see
Parameters, Section \ref{stereo_camera:sect-cam-params}). The frame
rate of the disparity image cannot be greater than the frame rate of
the camera images.

Choose a lesser Disparity Image Quality\:(Section \ref{stereo_matching
:sect-disp-image-parameters}). High-resolution disparity images are
only available at about 3 Hz. Full 25 Hz can only be achieved for low-
resolution disparity images (see also Table 1, page
\pageref{hardware_spec:tab-common-hardware-specifications}).

Decrease the Disparity Range and increase the Minimum
Distance\:(Section \ref{stereo_matching:sect-disp-image-parameters})
as much as possible for the application.

Decrease the Median filtering value\:(Section \ref{stereo_matching
:sect-disp-image-parameters}).

The disparity image does not show close objects

Check whether the object is too close to the cameras. Consider the
depth ranges of the rc_visard variants (see Table 2, page
\pageref{hardware_spec:tab-hardware-differences}).

Increase the Disparity Range\:(Section \ref{stereo_matching:sect-disp-
image-parameters}).

Decrease the Minimum Distance\:(Section \ref{stereo_matching:sect-
disp-image-parameters}).

The disparity image does not show distant objects

Increase the Maximum Distance\:(Section \ref{stereo_matching:sect-
disp-image-parameters}).

Increase the Maximum Depth Error\:(Section \ref{stereo_matching:sect-
disp-image-parameters}).

Decrease the Minimum Confidence\:(Section \ref{stereo_matching:sect-
disp-image-parameters}).

The disparity image is too noisy

Increase the Segmentation value\:(Section \ref{stereo_matching:sect-
disp-image-parameters}).

Increase the Fill-In value\:(Section \ref{stereo_matching:sect-disp-
image-parameters}).

Increase the Median filtering value\:(Section \ref{stereo_matching
:sect-disp-image-parameters}).

The disparity values or the resulting depth values are too inaccurate

Decrease the distance between the rc_visard and the scene. Depth-
measurement error grows quadratically with the distance from the
cameras.

Check whether the scene contains repetitive patterns and remove them
if it does. They could cause wrong disparity measurements.

Check whether the chosen rc_visard variant is correct for the
application (see Table 2, page \pageref{hardware_spec:tab-hardware-
differences}).

The disparity image is too smooth

Decrease the Median filtering value\:(Section \ref{stereo_matching
:sect-disp-image-parameters}).

Decrease the Fill-In value\:(Section \ref{stereo_matching:sect-disp-
image-parameters}).

The disparity image does not show small structures

Decrease the Segmentation value\:(Section \ref{stereo_matching:sect-
disp-image-parameters}).

Decrease the Fill-In value\:(Section \ref{stereo_matching:sect-disp-
image-parameters}).

Dynamics issues

State estimates are unavailable

Check in the Web GUI that pose estimation has been switched on (see
Parameters, Section \ref{stereo_visodo:sect-vo-parameters}).

Check in the Web GUI that the update rate is about 200 Hz.

Check the Logs in the Web GUI for errors.

The state estimates are too noisy

Adapt the parameters for visual odometry as described in
Parameters\:(Section \ref{stereo_visodo:sect-vo-parameters}).

Check whether the camera pose stream has enough accuracy.

Pose estimation has jumps

Has the SLAM component been turned on? SLAM can cause jumps when
reducing errors due to a loop closure.

Adapt the parameters for visual odometry as described in
Parameters\:(Section \ref{stereo_visodo:sect-vo-parameters}).

Pose frequency is too low

Use the real-time pose stream with a 200 Hz update rate. See Stereo
INS\:(Section \ref{stereo_ins:sect-stereo-ins}).

Delay/Latency of pose is too great

Use the real-time pose stream. See Stereo INS\:(Section
\ref{stereo_ins:sect-stereo-ins}).

GigE Vision/GenICam issues

No images

Check that the components are enabled. See ComponentSelector and
ComponentEnable in Important GenICam parameters\:(Section
\ref{gigevision:sect-genicam-params}).
